<resources>
    <string name="app_name">Hangout.SG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="facebook_app_id">271261253235446</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="no_internet_error_msg">Unable to connect to the Internet. Please check your connection settings and try again.</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>

    <string name="event_title">Title</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="time">HH:MM</string>
    <string name="location">Location</string>
    <string name="description">Please provide more information on the activity</string>
    <string name="title_activity_create_event">Create Event</string>
</resources>
