<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sg.hangout.hangoutsg.EventDetailsActivity"
    tools:showIn="@layout/activity_create_event">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <EditText android:id="@+id/event_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title" />
            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left">>
                <EditText
                    android:id="@+id/date"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:hint="@string/date"/>

                <ImageView
                    android:id="@+id/calendarImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/calendar"
                    android:layout_alignRight="@id/date"
                    android:onClick="datepicker"/>
                <EditText
                    android:id="@+id/time"
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/time"/>
                <ImageView
                    android:id="@+id/clockImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/clock"
                    android:layout_alignRight="@id/time"
                    android:onClick="timepicker"/>

            </LinearLayout>
            <EditText android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location" />
            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:gravity="bottom"
                android:hint="@string/description"/>
            <EditText
                android:id="@+id/organizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Organized by: "

            <Button
                android:id="@+id/submitbutton"
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="CREATE"
                android:onClick="submit"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
